...
        headerShown: false,
      }}
    >
      <Tab.Screen
        name="Home"
        component={HomeScreen}
        options={{ tabBarButtonTestID: 'tab-home' }}
      />
      <Tab.Screen
        name="Learn"
        component={LevelMapScreen}
        options={{ tabBarButtonTestID: 'tab-learn' }}
      />
      <Tab.Screen
        name="Songs"
        component={SongLibraryScreen}
        options={{ tabBarButtonTestID: 'tab-songs' }}
      />
...
